# measures

./: .gitignore  AUTOMATIC_CHAIN_RULE.md  BENCHMARKING_AND_PROFILING.md  BENCHMARK_RESULTS.md  CLEANUP_SUMMARY.md  Cargo.toml  DESIGN_NOTES.md  DEVELOPER_NOTES.md  DROPPING_CACHE_PROPOSAL.md  EGGLOG_BENCHMARK_RESULTS.md  ERGONOMIC_IR_IMPROVEMENTS.md  EXPONENTIAL_FAMILY_IR_DEMO.md  FACTORIAL_OPTIMIZATION.md  IID_EXPONENTIAL_FAMILY_IMPLEMENTATION.md  LICENSE  OPTIMIZATION_SUMMARY.md  OVERHEAD_ANALYSIS.md  PROFILING_SETUP.md  README.md  ROADMAP.md  SIMPLIFICATION_PROPOSAL.md  SIMPLIFICATION_SUMMARY.md  STRUCTURED_LOG_DENSITY_FRAMEWORK.md  SYMBOLIC_IR_IMPROVEMENTS.md  assembly_output.txt  grep  profile.sh
benches/: auto_jit_benchmarks.rs  density_computation.rs  jit_comparison_bench.rs  normal_benchmarks.rs  simple_jit_benchmarks.rs
docs/: JIT_COMPILATION_COMPLETE.md  OPTIMIZATION_APPROACHES.md  README.md  api.md  architecture.md  capabilities_summary.md  general_density_computation.md  performance.md  performance_optimization.md
examples/: README.md  README_autodiff.md  auto_jit_derivation.rs  autodiff_example.rs  autodiff_framework_integration.rs  bayesian_jit_example.rs  benchmark_comparison.rs  boilerplate_elimination_demo.rs  cache_performance_demo.rs  cached_exponential_family.rs  efficient_cache_demo.rs  egglog_benchmark.rs  egglog_jit_integration.rs  enhanced_constant_extraction.rs  ergonomic_ir_demo.rs  exponential_family_ir_example.rs  exponential_family_relative_density.rs  exponential_vs_non_exponential.rs  general_density_computation.rs  generic_implementation_demo.rs  iid_as_exponential_family.rs  iid_comparison_summary.rs  iid_efficient_computation.rs  iid_efficient_vs_naive.rs  iid_example.rs  iid_exponential_family_theory.rs  iid_optimization_demo.rs  iid_standard_api_demo.rs  iid_statistical_inference.rs  inline_jit_demo.rs  jit_compilation.rs  jit_compilation_demo.rs  measure_theory_showcase.rs  memory_profiling.rs  normal_optimization_techniques.rs  optimization_comparison.rs  profiling_workload.rs  real_symbolic_optimization.rs  redundancy_elimination_demo.rs  runtime_vs_compile_time_optimization.rs  (+9 more)
mathjit/: Cargo.toml  README.md  ROADMAP.md
mathjit/examples/: basic_usage.rs  polynomial_demo.rs
mathjit/src/: error.rs  final_tagless.rs  lib.rs
measures-bayesian/: Cargo.toml
measures-bayesian/src/: lib.rs
measures-bayesian/src/bayesian/: mod.rs
measures-combinators/: Cargo.toml
measures-combinators/src/: lib.rs
measures-combinators/src/measures/combinators/: superposition.rs  transform.rs
measures-combinators/src/measures/derived/: binomial_coefficient.rs  dirac.rs  factorial.rs  integral.rs  mod.rs  negative_binomial_coefficient.rs
measures-combinators/src/measures/primitive/: lebesgue.rs
measures-core/: Cargo.toml
measures-core/src/: lib.rs
measures-core/src/core/: autodiff.rs  density.rs  log_density_decomposition.rs  mod.rs  utils.rs
measures-core/src/primitive/: counting.rs  lebesgue.rs
measures-core/src/traits/: dot_product.rs
measures-distributions/: Cargo.toml
measures-distributions/examples/: final_tagless_demo.rs
measures-distributions/src/: lib.rs
measures-distributions/src/distributions/: final_tagless.rs  mod.rs
measures-distributions/src/distributions/continuous/: beta.rs  cauchy.rs  chi_squared.rs  exponential.rs  gamma.rs  mod.rs  normal.rs  stdnormal.rs  student_t.rs
measures-distributions/src/distributions/discrete/: bernoulli.rs  binomial.rs  categorical.rs  geometric.rs  mod.rs  negative_binomial.rs  poisson.rs
measures-distributions/src/distributions/multivariate/: multinormal.rs
measures-exponential-family/: Cargo.toml
measures-exponential-family/examples/: final_tagless_demo.rs
measures-exponential-family/src/: lib.rs
measures-exponential-family/src/exponential_family/: auto_jit.rs  final_tagless.rs  iid.rs  jit.rs  mod.rs
src/: lib.rs  traits.rs
src/bayesian/: mod.rs
src/core/: density.rs  density_specialization_demo.rs  measure.rs  mod.rs  types.rs  utils.rs
src/distributions/: mod.rs
src/distributions/continuous/: beta.rs  cauchy.rs  chi_squared.rs  exponential.rs  gamma.rs  mod.rs  normal.rs  stdnormal.rs  student_t.rs
src/distributions/discrete/: bernoulli.rs  binomial.rs  categorical.rs  geometric.rs  mod.rs  negative_binomial.rs  poisson.rs
src/distributions/multivariate/: mod.rs  multinormal.rs
src/exponential_family/: array_utils.rs  auto_jit.rs  cache_trait.rs  density_helpers.rs  egglog_optimizer.rs  final_tagless.rs  generic_cache.rs  iid.rs  implementations.rs  jit.rs  mod.rs  symbolic.rs  symbolic_ir.rs  traits.rs
src/measures/: counting.rs  dirac.rs  lebesgue.rs  mod.rs  normal.rs  weighted.rs
src/measures/combinators/: mod.rs  product.rs  pushforward.rs  restriction.rs  superposition.rs  transform.rs
src/measures/derived/: dirac.rs  (+6 more)
src/statistics/: mod.rs
src/symbolic_ir/: expr.rs  jit.rs  mod.rs
src/traits/: dot_product.rs  exponential_family.rs  mod.rs
symbolic-math/: Cargo.toml  README.md
symbolic-math/benches/: divan_benchmarks.rs  execution_overhead_analysis.rs  overhead_reduction_benchmarks.rs
symbolic-math/docs/: ARCHITECTURE.md  BENCHMARKS.md  EXECUTION_OVERHEAD_ANALYSIS.md  OVERHEAD_REDUCTION.md  PERFORMANCE.md
symbolic-math/examples/: advanced_features.rs  comprehensive_benchmark.rs  final_tagless_showcase.rs  improved_simplification.rs  jit_final_tagless_demo.rs  micro_benchmarks.rs  overhead_demonstration.rs  overhead_reduction_demo.rs  overhead_summary.rs  profiling_benchmark.rs  simple_profile.rs
symbolic-math/src/: expr.rs  final_tagless.rs  jit.rs  lib.rs  optimization.rs
tests/: bayesian_tests.proptest-regressions  bayesian_tests.rs  binomial_test.rs  cache_trait_tests.rs  categorical_test.rs  core_density_tests.rs  core_utils_tests.rs  discrete_distributions_tests.rs  distributions_tests.rs  exponential_family.rs  exponential_family_spaces.rs  exponential_family_tests.rs  iid_tests.rs  negative_binomial_test.rs  normal_comparison.rs  redundancy_elimination_test.rs  type_level_dispatch_test.rs  validation_tests.rs
(+3 files in other folders)
