[package]
name = "measures"
version = "0.1.0"
edition = "2024"

[dependencies]
alga = "0.9.3"
approx = "0.5.1"
nalgebra = "0.33.2"
num-traits = "0.2"
# Profiling dependencies (lightweight, zero-cost when not used)
profiling = "1.0"
# Optional advanced tools
tracy-client = { version = "0.18", optional = true }
iai-callgrind = { version = "0.14", optional = true }
# Add rv for comparison testing
rv = { git = "https://github.com/promised-ai/rv", branch = "release/v0.19.0", optional = true }
# Symbolic mathematics
rusymbols = { version = "0.1.2", optional = true }
# JIT compilation with Cranelift
cranelift-codegen = { version = "0.120", optional = true }
cranelift-jit = { version = "0.120", optional = true }
cranelift-module = { version = "0.120", optional = true }
cranelift-frontend = { version = "0.120", optional = true }
libm = "0.2.15"
# Special mathematical functions (pure Rust implementation)
special = "0.11.4"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports", "cargo_bench_support"] }
dhat = "0.3"
rand = "0.9"
rv = { git = "https://github.com/promised-ai/rv", branch = "release/v0.19.0" }
inferno = "0.12"      # Better flamegraph generation  

[profile.profiling]
inherits = "release"
debug = true  # Enable debug symbols for profiling

[profile.bench]
opt-level = 3        # Full optimization like release
debug = false        # No debug info for clean benchmarks
lto = false          # Disable LTO to prevent over-optimization across crates
codegen-units = 1    # Single codegen unit for consistent timings
panic = "abort"      # Faster than unwinding

[[bench]]
name = "density_computation"
harness = false

[features]
default = []
profiling = []       # Enable profiling instrumentation
tracy = ["dep:tracy-client"]
callgrind = ["dep:iai-callgrind"]
dhat-heap = []    # Simple feature flag for heap profiling as per dhat docs
symbolic = ["dep:rusymbols"]
jit = ["symbolic", "dep:cranelift-codegen", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-frontend"]
