[workspace]
members = [".", "symbolic-math", "measures-core"]
resolver = "2"

[package]
name = "measures"
version = "0.1.0"
edition = "2024"

[dependencies]
alga = "0.9.3"
approx = "0.5.1"
nalgebra = "0.33.2"
num-traits = "0.2"
# Profiling dependencies (lightweight, zero-cost when not used)
profiling = { version = "1.0", optional = true }
# Optional advanced tools
tracy-client = { version = "0.18", optional = true }
iai-callgrind = { version = "0.14", optional = true }
# Add rv for comparison testing
rv = { git = "https://github.com/promised-ai/rv", branch = "release/v0.19.0", optional = true }
# Special mathematical functions (pure Rust implementation)
special = "0.11.4"
egglog = "0.4"
# Automatic differentiation
ad_trait = { version = "0.1.6", optional = true }
simba = { version = "0.9", optional = true }
# Add dependency on our new symbolic-math crate
symbolic-math = { path = "symbolic-math", optional = true }
# JIT compilation with Cranelift (still needed for exponential_family/jit.rs)
cranelift-codegen = { version = "0.120", optional = true }
cranelift-jit = { version = "0.120", optional = true }
cranelift-module = { version = "0.120", optional = true }
cranelift-frontend = { version = "0.120", optional = true }
# Add dependency on our new measures-core crate
measures-core = { path = "measures-core", optional = false }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports", "cargo_bench_support"] }
dhat = "0.3"
rand = "0.9"
rv = { git = "https://github.com/promised-ai/rv", branch = "release/v0.19.0" }
inferno = "0.12"      # Better flamegraph generation  
proptest = "1.0"      # Property-based testing

[profile.profiling]
inherits = "release"
debug = true  # Enable debug symbols for profiling

[profile.bench]
opt-level = 3        # Full optimization like release
debug = false        # No debug info for clean benchmarks
lto = false          # Disable LTO to prevent over-optimization across crates
codegen-units = 1    # Single codegen unit for consistent timings
panic = "abort"      # Faster than unwinding

[[bench]]
name = "density_computation"
harness = false

[[bench]]
name = "auto_jit_benchmarks"
harness = false

[[bench]]
name = "simple_jit_benchmarks"
harness = false

[features]
default = []
symbolic = ["dep:symbolic-math"]
jit = ["symbolic", "symbolic-math?/jit", "dep:cranelift-codegen", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-frontend"]
optimization = ["symbolic", "symbolic-math?/optimization"]
profiling = ["dep:profiling"]
autodiff = ["dep:ad_trait", "dep:simba"]

# [[bin]]
# name = "perf_test"
# path = "src/bin/perf_test.rs"
