[package]
name = "measures-core"
version = "0.1.0"
edition = "2024"
description = "Core measure theory abstractions and traits"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-repo/measures"

[dependencies]
# Core numeric traits
num-traits = "0.2"
# Linear algebra for multivariate support
nalgebra = "0.33.2"
# Algebraic structures
alga = "0.9.3"
# Approximate equality for testing
approx = "0.5.1"

# Optional automatic differentiation support
ad_trait = { version = "0.1.6", optional = true }
simba = { version = "0.9", optional = true }

[features]
default = []
autodiff = ["dep:ad_trait", "dep:simba"] 