[package]
name = "measures-exponential-family"
version = "0.1.0"
edition = "2024"
description = "Exponential family distributions and JIT optimization for the measures library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chad-measures/measures"
keywords = ["exponential-family", "jit", "optimization", "statistics"]
categories = ["mathematics", "science"]

[dependencies]
# Core measure theory abstractions
measures-core = { path = "../measures-core" }
# Measure combinators for derived measures
measures-combinators = { path = "../measures-combinators" }
# Symbolic computation and JIT - now required for final tagless
symbolic-math = { path = "../symbolic-math" }

# Core numeric traits
num-traits = "0.2"
# Linear algebra
nalgebra = "0.33.2"
# Algebraic structures
alga = "0.9.3"
# Approximate equality for testing
approx = "0.5.1"

# JIT compilation with Cranelift
cranelift-codegen = { version = "0.120", optional = true }
cranelift-jit = { version = "0.120", optional = true }
cranelift-module = { version = "0.120", optional = true }
cranelift-frontend = { version = "0.120", optional = true }

# Optional automatic differentiation support
ad_trait = { version = "0.1.6", optional = true }
simba = { version = "0.9", optional = true }

[features]
default = ["final-tagless"]
final-tagless = []  # Final tagless is now always available
jit = ["final-tagless", "symbolic-math/jit", "dep:cranelift-codegen", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-frontend"]
autodiff = ["dep:ad_trait", "dep:simba", "measures-core/autodiff"] 